tests/samples/negative/expressions/if_expression_type_mismatch.ax
module if_expression_type_mismatch;

fn main() -> i32 {
    return if true { 1 } else { false };
}
